recursion.logo.lessons.recursion.logo.square.FourSquare.scala.error
FourSquare:5: error: identifier expected but ')' found.
      avance(100.)
                 ^FourSquare:6: error: identifier expected but ')' found.
      droite(90.)
                ^