recursion.logo.lessons.recursion.logo.square.FourSquare.scala.code
override def run() {
  
  def faire_carre(){
    for (i<-0 to 3){
      avance(100.)
      droite(90.)
    }  
  }
  
  faire_carre()
  
}